--- a/index.html
+++ b/index.html
@@ -472,7 +472,9 @@ layout: null
       <h1 class="main-title">Money Flow & Code Vibe</h1>
       <p class="sub-desc">
         안녕하세요, <strong>"돈의 흐름을 추적하는 바이브 코딩"</strong>으로<br>
-        핀테크 도구 <a href="https://sudanghelp.co.kr/" target="_blank" rel="noopener noreferrer">[수당헬프]</a>를 개발하는 <strong>Seansble</strong>입니다.<br>
+        핀테크 도구
+        <a href="https://sudanghelp.co.kr/" target="_blank" rel="noopener noreferrer">Sudanghelp</a>
+        를 개발하는 <strong>Seansble</strong>입니다.<br>
         기술적 경험(PWA, SEO)과 금융 로직 구현 과정을 기록합니다.
       </p>
     </div>
@@ -548,17 +550,17 @@ layout: null
           <ul class="link-list">
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/parents/" target="_blank" rel="noopener noreferrer">
-                👶 출산/육아 (부모급여) <span class="arrow-icon">➔</span>
+                👶 Sudanghelp Parents <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/military/salary/" target="_blank" rel="noopener noreferrer">
-                🪖 군인 (월급/적금) <span class="arrow-icon">➔</span>
+                🪖 Military Tools <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/unemployment/" target="_blank" rel="noopener noreferrer">
-                💼 실업급여 모의계산 <span class="arrow-icon">➔</span>
+                💼 https://sudanghelp.co.kr/unemployment/ <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
@@ -574,22 +576,22 @@ layout: null
           <ul class="link-list">
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/travel/exchange-calculator/" target="_blank" rel="noopener noreferrer">
-                ✈️ 여행/환전 (PWA) <span class="arrow-icon">➔</span>
+                ✈️ Travel Helper <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/creditcalc/step-loan/" target="_blank" rel="noopener noreferrer">
-                🏦 대출 (체증식/중도상환) <span class="arrow-icon">➔</span>
+                🏦 Step-Loan Simulator <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/additionaltax/supply-calc/" target="_blank" rel="noopener noreferrer">
-                🧾 세금 (부가세/공급가액) <span class="arrow-icon">➔</span>
+                🧾 Supply/VAT Helper <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/electricity/" target="_blank" rel="noopener noreferrer">
-                ⚡ 공과금 (전기요금) <span class="arrow-icon">➔</span>
+                ⚡ Electricity Guide <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
@@ -605,12 +607,12 @@ layout: null
           <ul class="link-list">
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/compoundcalc/" target="_blank" rel="noopener noreferrer">
-                📈 투자 설계 (복리/적금) <span class="arrow-icon">➔</span>
+                📈 Compound Lab <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <a href="https://sudanghelp.co.kr/coinmore/" target="_blank" rel="noopener noreferrer">
-                🪙 크립토 (물타기) <span class="arrow-icon">➔</span>
+                🪙 Coin Tools <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
@@ -672,7 +674,10 @@ layout: null
 
   <!-- 푸터 -->
   <footer class="footer">
-    <p>© 2025 <a href="https://sudanghelp.co.kr/" target="_blank" rel="noopener noreferrer">수당헬프</a> · Built with Jekyll & GitHub Pages</p>
+    <p>© 2025
+      <a href="https://sudanghelp.co.kr/" target="_blank" rel="noopener noreferrer">https://sudanghelp.co.kr/</a>
+      · Built with Jekyll & GitHub Pages
+    </p>
   </footer>
 
 </body>
