--- a/index.html
+++ b/index.html
@@ -312,19 +312,19 @@ layout: null
             <li class="link-item">
               <!-- (키워드 앵커 1/4) -->
               <a href="https://sudanghelp.co.kr/parents/" target="_blank" rel="noopener noreferrer">
-                👶 부모급여 계산기/가이드 <span class="arrow-icon">➔</span>
+                 부모급여 통합 계산기 및 가이드 <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (자연문장 앵커 1/2) -->
               <a href="https://sudanghelp.co.kr/military/salary/" target="_blank" rel="noopener noreferrer">
-                🪖 군 관련 계산기가 필요하면 여기서 바로 확인하세요 <span class="arrow-icon">➔</span>
+                 군 관련 계산기 여기에서 확인하세요 <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (Naked URL 1/2) -->
               <a href="https://sudanghelp.co.kr/unemployment/" target="_blank" rel="noopener noreferrer">
-                💼 https://sudanghelp.co.kr/unemployment/ <span class="arrow-icon">➔</span>
+                 https://sudanghelp.co.kr/unemployment/ <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
@@ -341,25 +341,25 @@ layout: null
             <li class="link-item">
               <!-- (키워드 앵커 2/4) -->
               <a href="https://sudanghelp.co.kr/travel/exchange-calculator/" target="_blank" rel="noopener noreferrer">
-                ✈️ 환율 계산기(PWA) <span class="arrow-icon">➔</span>
+                환율 계산기(PWA) <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (키워드 앵커 3/4) -->
               <a href="https://sudanghelp.co.kr/creditcalc/step-loan/" target="_blank" rel="noopener noreferrer">
-                🏦 체증식 대출 계산기 <span class="arrow-icon">➔</span>
+                 체증식 대출 계산기 <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (키워드 앵커 4/4) -->
               <a href="https://sudanghelp.co.kr/additionaltax/supply-calc/" target="_blank" rel="noopener noreferrer">
-                🧾 부가세·공급가액 계산기 <span class="arrow-icon">➔</span>
+                 부가세·공급가액 계산기 <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (자연문장 앵커 2/2) -->
               <a href="https://sudanghelp.co.kr/electricity/" target="_blank" rel="noopener noreferrer">
-                ⚡ 전기요금이 얼마나 나올지 빠르게 계산해보세요 <span class="arrow-icon">➔</span>
+                 전기요금이 얼마나 나올지 빠르게 계산해보세요 <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
@@ -376,13 +376,13 @@ layout: null
             <li class="link-item">
               <!-- (브랜드 앵커 2/2) -->
               <a href="https://sudanghelp.co.kr/compoundcalc/" target="_blank" rel="noopener noreferrer">
-                📈 Sudanghelp Compound Lab <span class="arrow-icon">➔</span>
+                 Sudanghelp Compound Lab <span class="arrow-icon">➔</span>
               </a>
             </li>
             <li class="link-item">
               <!-- (Naked URL 2/2) -->
               <a href="https://sudanghelp.co.kr/coinmore/" target="_blank" rel="noopener noreferrer">
-                🪙 https://sudanghelp.co.kr/coinmore/ <span class="arrow-icon">➔</span>
+                 https://sudanghelp.co.kr/coinmore/ <span class="arrow-icon">➔</span>
               </a>
             </li>
           </ul>
